# markdown_demo_pr_workflow

./: .env.test  .pre-commit-config.yaml  Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  sbom.json
.github/: .dockerignore  dependabot.yml
.github/codeql/: config.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  sbom.yml
db/: sample_queries.sql  schema.sql  seed.sql
defect_dashboard/: __init__.py  analytics.py  pyproject.toml
defect_dashboard/tests/: conftest.py  test_defect_queries.py  test_e2e_streamlit.py  test_oneoff_defects.py  test_recurring_defects.py  test_zero_quantity_exclusion.py
docs/: architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
